# ckanext-whocharts

./: MANIFEST.in  README.md  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/whocharts/: plugin.py
ckanext/whocharts/assets/: script.js  webassets.yml
ckanext/whocharts/public/geojson/: africa_countries.geojson
ckanext/whocharts/templates/views/: portal_chart.html  portal_map.html
ckanext/whocharts/tests/: test_plugin.py
